Fix modal z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ html, body {
     justify-content: center;
     padding: 20px;
     transition: opacity 400ms;
+    z-index: 10;
 }
 
 .modal.user-true {
